[package]
name = "tlsprint-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tlsprint-core = { path = "../tlsprint-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
toml.workspace = true
