[package]
name = "tlsprint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tls-parser = "0.12"
md-5 = "0.10"
sha2 = "0.10"
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
