[package]
name = "tlsprint-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tlsprint-core = { path = "../tlsprint-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
